--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Chat App</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/chatlogo.webp" >
+  <link rel="icon" type="image/x-icon" href="assets/logoo.webp" >
 </head>
 <body>
   <app-root></app-root>
